# echorubiconpoly

./: .gitignore  DEPENDENCY_CHECK.md  EmergencyFix.ps1  HALLUCINATION_AUDIT_REPORT.md  MyAI_cleaned.css  README.md  RubiconDeploy.bat  RubiconDeploy.ps1  VoiceManager.js  __Blueprint_20250628_161450.txt  app-wrapper.js  auth-context.js  backend-flat.txt  baseline_2025-08-13_13-26-57.json  bootstrap-validator.js  bundle.js  cappaths.js  check-capsules.js  check-context-injection.js  checkNewCapsules.ps1  clean-myai.js  config.json  contextDebugger.js  debug-console.html  debug-memory.js  deep-diagnostic.ps1  detailed-diag.cjs  diagnose-context.ps1  diagnose-echo.js  diagnose-memory-pipeline.js  diagnose-refresh.ps1  drivemapper.bat  echo-audit-usage.js  echo-backend-rust.txt  echo-boot-manager.js  echo-check-archive.js  echo-diagnose-unified.js  echo-diagnostic-1752340568660.json  echo-diagnostic-v2.js  echo-fix-unified.js  (+97 more)
echo-backend-rust/: .dockerignore  Cargo.toml  Dockerfile  config.json  config.json.backup  config.prod.json  echo-backend-rust.txt  echo_sessions.db  file-structure.txt  fly.toml  meilisearch.toml
echo-backend-rust/.cargo/: config.toml
echo-backend-rust/data.ms/: instance-uid
echo-backend-rust/data.ms/auth/: data.mdb  lock.mdb
echo-backend-rust/data.ms/tasks/: data.mdb  lock.mdb
echo-backend-rust/meili_data/: instance-uid
echo-backend-rust/meili_data/auth/: data.mdb  lock.mdb
echo-backend-rust/meili_data/tasks/: data.mdb  lock.mdb
echo-backend-rust/migrations/: 001_create_auth.sql
echo-backend-rust/src/: auth.rs  features.rs  main.rs  readme.txt
echo-backend-rust/src/models/: config.rs  llm.rs  mod.rs  stt.rs  tts.rs  voice_streamer.rs  whisper.rs
(+359 files in other folders)
